fix: AddonsConfig.apigee update loop when addons are explicitly disabled
Signed-off-by: Erhan Cagirici <erhan@upbound.io>

--- a/examples/apigee/cluster/v1beta1/addonsconfig.yaml
+++ b/examples/apigee/cluster/v1beta1/addonsconfig.yaml
@@ -10,10 +10,10 @@ metadata:
 spec:
   forProvider:
     addonsConfig:
-    - apiSecurityConfig:
-      - enabled: true
+      apiSecurityConfig:
+        enabled: true
       monetizationConfig:
-      - enabled: true
+        enabled: true
     orgSelector:
       matchLabels:
         testing.upbound.io/example-name: apigee-addon-configs
