--- a/examples/apigee/cluster/v1beta1/addonsconfig-explicitdisable.yaml
+++ b/examples/apigee/cluster/v1beta1/addonsconfig-explicitdisable.yaml
@@ -1,90 +1,93 @@
-apiVersion: apigee.gcp.m.upbound.io/v1beta1
+apiVersion: apigee.gcp.upbound.io/v1beta1
 kind: AddonsConfig
 metadata:
   annotations:
     meta.upbound.io/example-id: apigee/v1beta1/addonsconfig
     upjet.upbound.io/manual-intervention: "This resource was skipped because the dependent Organization resource was skipped"
   labels:
-    testing.upbound.io/example-name: apigee-addon-configs
-  name: apigee-addon-configs
-  namespace: upbound-system
+    testing.upbound.io/example-name: apigee-addon-configs-explicitdisable
+  name: apigee-addon-configs-explicitdisable
 spec:
   forProvider:
     addonsConfig:
       apiSecurityConfig:
-        enabled: true
+        enabled: false
       monetizationConfig:
-        enabled: true
+        enabled: false
     orgSelector:
       matchLabels:
-        testing.upbound.io/example-name: apigee-addon-configs
+        testing.upbound.io/example-name: apigee-addon-configs-explicitdisable
+
 ---
-apiVersion: apigee.gcp.m.upbound.io/v1beta1
+
+apiVersion: apigee.gcp.upbound.io/v1beta2
 kind: Organization
 metadata:
   annotations:
     meta.upbound.io/example-id: apigee/v1beta1/addonsconfig
     upjet.upbound.io/manual-intervention: Organization requires a real Project ID
   labels:
-    testing.upbound.io/example-name: apigee-addon-configs
-  name: apigee-addon-configs
-  namespace: upbound-system
+    testing.upbound.io/example-name: apigee-addon-configs-explicitdisable
+  name: apigee-addon-configs-explicitdisable
 spec:
   forProvider:
     analyticsRegion: us-central1
     authorizedNetworkSelector:
       matchLabels:
-        testing.upbound.io/example-name: apigee-addon-configs
+        testing.upbound.io/example-name: apigee-addon-configs-explicitdisable
     projectId: ${project.project_id}
+
 ---
-apiVersion: compute.gcp.m.upbound.io/v1beta1
+
+apiVersion: compute.gcp.upbound.io/v1beta1
 kind: GlobalAddress
 metadata:
   annotations:
     meta.upbound.io/example-id: apigee/v1beta1/addonsconfig
     upjet.upbound.io/manual-intervention: "This resource was skipped because the dependent Organization resource was skipped"
   labels:
-    testing.upbound.io/example-name: apigee-addon-configs
-  name: apigee-addon-configs
-  namespace: upbound-system
+    testing.upbound.io/example-name: apigee-addon-configs-explicitdisable
+  name: apigee-addon-configs-explicitdisable
 spec:
   forProvider:
     addressType: INTERNAL
     networkSelector:
       matchLabels:
-        testing.upbound.io/example-name: apigee-addon-configs
+        testing.upbound.io/example-name: apigee-addon-configs-explicitdisable
     prefixLength: 16
     purpose: VPC_PEERING
+
 ---
-apiVersion: compute.gcp.m.upbound.io/v1beta1
+
+apiVersion: compute.gcp.upbound.io/v1beta1
 kind: Network
 metadata:
   annotations:
     meta.upbound.io/example-id: apigee/v1beta1/addonsconfig
     upjet.upbound.io/manual-intervention: "This resource was skipped because the dependent Organization resource was skipped"
   labels:
-    testing.upbound.io/example-name: apigee-addon-configs
-  name: apigee-addon-configs
-  namespace: upbound-system
+    testing.upbound.io/example-name: apigee-addon-configs-explicitdisable
+  name: apigee-addon-configs-explicitdisable
 spec:
   forProvider: {}
+
 ---
-apiVersion: servicenetworking.gcp.m.upbound.io/v1beta1
+
+apiVersion: servicenetworking.gcp.upbound.io/v1beta1
 kind: Connection
 metadata:
   annotations:
     meta.upbound.io/example-id: apigee/v1beta1/addonsconfig
     upjet.upbound.io/manual-intervention: "This resource was skipped because the dependent Organization resource was skipped"
   labels:
-    testing.upbound.io/example-name: apigee-addon-configs
-  name: apigee-addon-configs
-  namespace: upbound-system
+    testing.upbound.io/example-name: apigee-addon-configs-explicitdisable
+  name: apigee-addon-configs-explicitdisable
 spec:
   forProvider:
     networkSelector:
       matchLabels:
-        testing.upbound.io/example-name: apigee-addon-configs
+        testing.upbound.io/example-name: apigee-addon-configs-explicitdisable
     reservedPeeringRangesSelector:
       matchLabels:
-        testing.upbound.io/example-name: apigee-addon-configs
+        testing.upbound.io/example-name: apigee-addon-configs-explicitdisable
     service: servicenetworking.googleapis.com
