--- a/examples/apigee/namespaced/v1beta1/addonsconfig-explicitdisableall.yaml
+++ b/examples/apigee/namespaced/v1beta1/addonsconfig-explicitdisableall.yaml
@@ -5,19 +5,25 @@ metadata:
     meta.upbound.io/example-id: apigee/v1beta1/addonsconfig
     upjet.upbound.io/manual-intervention: "This resource was skipped because the dependent Organization resource was skipped"
   labels:
-    testing.upbound.io/example-name: apigee-addon-configs
-  name: apigee-addon-configs
+    testing.upbound.io/example-name: apigee-addon-configs-explicitdisableall
+  name: apigee-addon-configs-explicitdisableall
   namespace: upbound-system
 spec:
   forProvider:
     addonsConfig:
       apiSecurityConfig:
-        enabled: true
+        enabled: false
       monetizationConfig:
-        enabled: true
+        enabled: false
+      advancedApiOpsConfig:
+        enabled: false
+      connectorsPlatformConfig:
+        enabled: false
+      integrationConfig:
+        enabled: false
     orgSelector:
       matchLabels:
-        testing.upbound.io/example-name: apigee-addon-configs
+        testing.upbound.io/example-name: apigee-addon-configs-explicitdisableall
 ---
 apiVersion: apigee.gcp.m.upbound.io/v1beta1
 kind: Organization
@@ -26,15 +32,15 @@ metadata:
     meta.upbound.io/example-id: apigee/v1beta1/addonsconfig
     upjet.upbound.io/manual-intervention: Organization requires a real Project ID
   labels:
-    testing.upbound.io/example-name: apigee-addon-configs
-  name: apigee-addon-configs
+    testing.upbound.io/example-name: apigee-addon-configs-explicitdisableall
+  name: apigee-addon-configs-explicitdisableall
   namespace: upbound-system
 spec:
   forProvider:
     analyticsRegion: us-central1
     authorizedNetworkSelector:
       matchLabels:
-        testing.upbound.io/example-name: apigee-addon-configs
+        testing.upbound.io/example-name: apigee-addon-configs-explicitdisableall
     projectId: ${project.project_id}
 ---
 apiVersion: compute.gcp.m.upbound.io/v1beta1
@@ -44,15 +50,15 @@ metadata:
     meta.upbound.io/example-id: apigee/v1beta1/addonsconfig
     upjet.upbound.io/manual-intervention: "This resource was skipped because the dependent Organization resource was skipped"
   labels:
-    testing.upbound.io/example-name: apigee-addon-configs
-  name: apigee-addon-configs
+    testing.upbound.io/example-name: apigee-addon-configs-explicitdisableall
+  name: apigee-addon-configs-explicitdisableall
   namespace: upbound-system
 spec:
   forProvider:
     addressType: INTERNAL
     networkSelector:
       matchLabels:
-        testing.upbound.io/example-name: apigee-addon-configs
+        testing.upbound.io/example-name: apigee-addon-configs-explicitdisableall
     prefixLength: 16
     purpose: VPC_PEERING
 ---
@@ -63,8 +69,8 @@ metadata:
     meta.upbound.io/example-id: apigee/v1beta1/addonsconfig
     upjet.upbound.io/manual-intervention: "This resource was skipped because the dependent Organization resource was skipped"
   labels:
-    testing.upbound.io/example-name: apigee-addon-configs
-  name: apigee-addon-configs
+    testing.upbound.io/example-name: apigee-addon-configs-explicitdisableall
+  name: apigee-addon-configs-explicitdisableall
   namespace: upbound-system
 spec:
   forProvider: {}
@@ -76,15 +82,15 @@ metadata:
     meta.upbound.io/example-id: apigee/v1beta1/addonsconfig
     upjet.upbound.io/manual-intervention: "This resource was skipped because the dependent Organization resource was skipped"
   labels:
-    testing.upbound.io/example-name: apigee-addon-configs
-  name: apigee-addon-configs
+    testing.upbound.io/example-name: apigee-addon-configs-explicitdisableall
+  name: apigee-addon-configs-explicitdisableall
   namespace: upbound-system
 spec:
   forProvider:
     networkSelector:
       matchLabels:
-        testing.upbound.io/example-name: apigee-addon-configs
+        testing.upbound.io/example-name: apigee-addon-configs-explicitdisableall
     reservedPeeringRangesSelector:
       matchLabels:
-        testing.upbound.io/example-name: apigee-addon-configs
+        testing.upbound.io/example-name: apigee-addon-configs-explicitdisableall
     service: servicenetworking.googleapis.com
